Finished up styling NPS 2

--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,11 @@
         </nav>
         </section>
     </header>
-    <main id="main"></main>
+    <main id="main">
+      <section class="intro"></section>
+
+      <section class="info" aria-label="park info"></section>
+    </main>
     <footer id="park-footer"></footer>
   </body>
 </html>
