--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <p class="disclaimer">
-      This is not a real NPS website. It is an educational exercise. If you
+      This is not a real NP website. It is an educational exercise. If you
       landed here by accident, to find the real website visit
       <a href="parkUrl">Yellowstone National Park</a>
     </p>
