--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NPS I - Yellowstone National Park</title>
+    <meta name="description" content="Getting some hands-on practice with Media Queries">
+    <meta name="author" content="Ash Jones & William Turlock">
+    <title>Vio Guesser</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <script type="module" src="js/main.js"></script>
   </head>
   <body>
