--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Getting some hands-on practice with Media Queries">
-    <meta name="author" content="Ash Jones & William Turlock">
+    <meta name="author" content="Ash Jones & William Harris">
     <title>Vio Guesser</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
