--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,15 @@
       <div id="dot4"></div>
     </header>
     <main id="main">
+      <div id="screen"></div>
+      <div class="container">
+        <button id="Q1">Q1</button>
+        <button id="Q2">Q2</button>
+        <button id="Q3">Q3</button>
+      </div>
       
     </main>
-    <footer id="park-footer">
+    <footer>
       <p>Vio Guesser &copy; 2025 - Ash Jones & William Harris</p>
       <!-- <p><a href="about-us.html">About Us</a></p>
       <p><a href="games.html">Games</a></p> -->
