Sorted styles and created review, reset, and genre base functionality

--- a/src/index.html
+++ b/src/index.html
@@ -27,24 +27,60 @@
       </div>
       <div class="rounded-rectangle1">
         <nav>
-          <a id="trailblazer-link" href="trail-blazer.html">Trailblazer</a>
-          <a id="site-plan-link" href="site-plan.html">Site Plan</a>
-          <a id="games-link" href="games.html">Games</a>
-          <a id="about-link" href="about-us.html">About Us</a>
-        </nav>
+          <button id="review-btn">Review</button>
+          <button id="reset-btn">Reset</button>
+       </nav>
       </div>
       <div id="rectangle"></div>
       <div id="dot3"></div>
       <div id="dot4"></div>
     </header>
+
+    <div id="review-overlay"></div>
+
+    <div id="review-panel">
+      <h2>Review</h2>
+      <ul id="review-list">
+        <li>No prompts yet!</li>
+      </ul>
+      <button id="close-review">Close</button>
+    </div>
     <main id="main">
+      <div id="genre-grid">
+        <div id="divider1">
+
+          <!-- Top container -->
+          <div class="genre-container top-container">
+            <div class="genre-buttons">
+              <button class="genre-btn">Action</button>
+              <button class="genre-btn">Adventure</button>
+              <button class="genre-btn">Horror</button>
+              <button class="genre-btn">Puzzle</button>
+              <button class="genre-btn">Strategy</button>
+            </div>
+          </div>
+
+          <!-- Bottom container -->
+          <div class="genre-container bottom-container">
+            <div class="genre-buttons">
+              <button class="genre-btn">RPG</button>
+              <button class="genre-btn">Sports</button>
+              <button class="genre-btn">Racing</button>
+              <button class="genre-btn">Simulation</button>
+            </div>
+          </div>
+
+          <!-- Toggle button -->
+          <button id="toggle-genres">▼ Show More</button>
+
+        </div>
+      </div>
       <div id="screen"></div>
       <div class="container">
         <button id="Q1">Q1</button>
         <button id="Q2">Q2</button>
         <button id="Q3">Q3</button>
       </div>
-      
     </main>
     <footer>
       <p>Vio Guesser &copy; 2025 - Ash Jones & William Harris</p>
