--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
       <div id="dot1"></div>
       <div id="dot2">
         <a id="logo-link" href="login.html">
-          <img class="logo" src="images/viologo.png" alt="Game Hunter Logo">
+          <img class="logo" src="src/images/viologo.png" alt="Game Hunter Logo">
         </a>
       </div>
       <div class="rounded-rectangle1">
@@ -58,13 +58,13 @@
       <p><a href="games.html">Games</a></p> -->
       <div class="social">
         <a href="https://facebook.com">
-          <img src="images/facebook.png" alt="fb icon">
+          <img src="src/images/facebook.png" alt="fb icon">
         </a>
         <a href="https://twitter.com">
-          <img src="images/twitter.png" alt="twitter icon">
+          <img src="src/images/twitter.png" alt="twitter icon">
         </a>
         <a href="https://instagram.com">
-          <img src="images/instagram.png" alt="instagram icon">
+          <img src="src/images/instagram.png" alt="instagram icon">
         </a>
       </div>
     </footer>
