--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
         <nav>
           <button id="review-btn">Review</button>
           <button id="reset-btn">Reset</button>
+          <button id="home-btn">Home</button>
+          <button id="guessr-btn">Guesser</button>
        </nav>
       </div>
       <div id="rectangle"></div>
